# ChangeLog for x11-misc/qlipper
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/qlipper/ChangeLog,v 1.1 2012/06/29 07:47:52 yngwin Exp $

*qlipper-2.0.0 (29 Jun 2012)

  29 Jun 2012; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +qlipper-2.0.0.ebuild:
  Initial commit